# todo

./: .bumpversion.cfg  README.md  setup.cfg
todo/: __init__.py  __main__.py  client.py  config.py  sources.py
todo/tests/: test_client.py
