[metadata]
name = todo
version = 0.0.1
author = Filip Úradník
author_email = filip.uradnik9@gmail.com
description = Simple TODO app
long_description = file: README.md
long_description_content_type = text/markdown
url = https://ms.mff.cuni.cz/~uradnikf
keywords = todo app cli

[options]
package_dir =
    = todo
packages = find:
python_requires = >=3.9
zip_safe = False

[options.packages.find]
where = todo

[options.entry_points]
console_scripts = 
    todo = todo.cli:main

