[metadata]
name = todo
version = 1.0.2
author = Filip Úradník
author_email = filip.uradnik9@gmail.com
description = Simple TODO app
long_description = file: README.md
long_description_content_type = text/markdown
url = https://ms.mff.cuni.cz/~uradnikf
keywords = todo app cli

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.9
zip_safe = False

[options.packages.find]
where = .

[options.entry_points]
console_scripts = 
    todo = todo.cli:main

