[metadata]
name = todo
version = 2.1.0
author = Filip Úradník
author_email = filip.uradnik9@gmail.com
description = Simple TODO app
long_description = file: README.md
long_description_content_type = text/markdown
url = https://ms.mff.cuni.cz/~uradnikf
keywords = todo app cli

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.9
zip_safe = False
install_requires =
    requests ~= 2.29

[options.packages.find]
where = .

[options.entry_points]
console_scripts = 
    todo = todo.__main__:main
